--- a/rps-game.html
+++ b/rps-game.html
@@ -15,15 +15,66 @@
     <body>
         <div>
             <button onclick="
-                const randomNum = Math.random();
+            const computerMove = pickComputerMove();
 
-                // if (randomNum >= 0 randomNum < 1 / 3)
+                let result = '';
+
+                if (computerMove === 'rock') {
+                    result = `It's a tie!`
+                } else if (computerMove === 'paper') {
+                    result = `You lose!`;
+                } else if (computerMove === 'scissors') {
+                    result = `You win!`;
+                }
+
+                alert(`You picked rock. Computer picked ${computerMove}. ${result}`);
+
                 ">Rock</button>
-            <button onclick="">Paper</button>
-            <button onclick="">Scissors</button>
+            <button onclick="
+            const computerMove = pickComputerMove();
+
+                let result = '';
+
+                    if (computerMove === 'rock') {
+                        result = `You win!`
+                    } else if (computerMove === 'paper') {
+                        result = `It's a tie!`;
+                    } else if (computerMove === 'scissors') {
+                        result = `You lose!`;
+                    }
+
+                    alert(`You picked paper. Computer picked ${computerMove}. ${result}`);
+            ">Paper</button>
+            <button onclick="
+            const computerMove = pickComputerMove();
+                let result = '';
+
+                    if (computerMove === 'rock') {
+                        result = `You lose!`
+                    } else if (computerMove === 'paper') {
+                        result = `You win!`;
+                    } else if (computerMove === 'scissors') {
+                        result = `It's a tie!`;
+                    }
+
+                    alert(`You picked scissors. Computer picked ${computerMove}. ${result}`);
+            ">Scissors</button>
         </div>
       <script>
+        function pickComputerMove () {
+            const randomNum = Math.random();
 
+            let computerMove = '';
+
+            if (randomNum >= 0 && randomNum < 1 / 3) {
+                computerMove = 'rock';
+            } else if (randomNum >= 1 / 3 && randomNum < 2 / 3) {
+                computerMove = 'paper';
+            } else if (randomNum >= 2 / 3 && randomNum < 1) {
+                computerMove = 'scissors';
+            }   
+            return computerMove;
+        }
       </script>
     </body>
     
