--- a/rps-game.html
+++ b/rps-game.html
@@ -15,56 +15,21 @@
     <body>
         <div>
             <button onclick="
-            const computerMove = pickComputerMove();
+            playGame('rock');
+            ">Rock</button>
 
-                let result = '';
-
-                if (computerMove === 'rock') {
-                    result = `It's a tie!`
-                } else if (computerMove === 'paper') {
-                    result = `You lose!`;
-                } else if (computerMove === 'scissors') {
-                    result = `You win!`;
-                }
-
-                alert(`You picked rock. Computer picked ${computerMove}. ${result}`);
-
-                ">Rock</button>
             <button onclick="
-            const computerMove = pickComputerMove();
-
-                let result = '';
-
-                    if (computerMove === 'rock') {
-                        result = `You win!`
-                    } else if (computerMove === 'paper') {
-                        result = `It's a tie!`;
-                    } else if (computerMove === 'scissors') {
-                        result = `You lose!`;
-                    }
-
-                    alert(`You picked paper. Computer picked ${computerMove}. ${result}`);
+            playGame('paper');
             ">Paper</button>
+
             <button onclick="
-            const computerMove = pickComputerMove();
-                let result = '';
-
-                    if (computerMove === 'rock') {
-                        result = `You lose!`
-                    } else if (computerMove === 'paper') {
-                        result = `You win!`;
-                    } else if (computerMove === 'scissors') {
-                        result = `It's a tie!`;
-                    }
-
-                    alert(`You picked scissors. Computer picked ${computerMove}. ${result}`);
+            playGame('scissors');
             ">Scissors</button>
         </div>
+
       <script>
         function pickComputerMove () {
             const randomNum = Math.random();
-
-            let computerMove = '';
 
             if (randomNum >= 0 && randomNum < 1 / 3) {
                 computerMove = 'rock';
@@ -75,6 +40,41 @@
             }   
             return computerMove;
         }
+
+        function playGame(playerMove) {
+            const computerMove = pickComputerMove();
+            
+            let result = '';
+
+            if (playerMove === 'rock') {
+                if (computerMove === 'rock') {
+                    result = `It's a tie!`
+                } else if (computerMove === 'paper') {
+                    result = `You lose!`;
+                } else if (computerMove === 'scissors') {
+                    result = `You win!`;
+                }
+            } else if (playerMove === 'paper') {
+                if (computerMove === 'rock') {
+                    result = `You win!`
+                } else if (computerMove === 'paper') {
+                    result = `It's a tie!`;
+                } else if (computerMove === 'scissors') {
+                    result = `You lose!`;
+                }
+            } else if (playerMove === 'scissors') {
+                if (computerMove === 'rock') {
+                    result = `You lose!`
+                } else if (computerMove === 'paper') {
+                    result = `You win!`;
+                } else if (computerMove === 'scissors') {
+                    result = `It's a tie!`;
+                }
+            };
+
+            alert(`You picked ${playerMove}. Computer picked ${computerMove}. ${result}`);
+        }
+
       </script>
     </body>
     
