added localStorage for score tracker

--- a/rps-game.html
+++ b/rps-game.html
@@ -38,6 +38,9 @@
         <div>
             <p>Current score: </p>
         </div>
+        <footer>
+            <p>JavaScript Practice Page</p>
+        </footer>
 
       <script>
         // Functions to generate random number for computer and show result based on user and computer choice
